tests/e2e/mutation_any_invalid4.error
Error: syntax error in story at line 3, column 14

3|    c = b.append(i:0)
                   ^^^

E0114: Mutation `append` does not accept argument `i`
