tests/e2e/mutation_any_invalid4.story
a = [] as List[any]
b = a[0]
c = b.append(i:0)
